melhorias no codigo